--- a/user-ms/src/main/resources/application.properties
+++ b/user-ms/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=8080
 
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/dev
+
+spring.flyway.schemas=users
+spring.jpa.properties.hibernate.default_schema=users
