--- a/shopping-ms/src/main/resources/application.properties
+++ b/shopping-ms/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8082
 
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/dev
+spring.datasource.username=postgres
+spring.datasource.password=eric1230
+
+spring.flyway.schemas=shopping
+spring.jpa.properties.hibernate.default_schema=shoppings
